@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2023 Jenkins Infra
+ * Copyright (c) 2023-2025 Jenkins Infra
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,11 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
-
 package io.jenkins.pluginhealth.scoring.service;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import io.jenkins.pluginhealth.scoring.config.ApplicationConfiguration;
 import io.jenkins.pluginhealth.scoring.model.updatecenter.UpdateCenter;
@@ -44,6 +43,7 @@ public class UpdateCenterService {
     }
 
     public UpdateCenter fetchUpdateCenter() throws IOException {
-        return objectMapper.readValue(new URL(configuration.jenkins().updateCenter()), UpdateCenter.class);
+        return objectMapper.readValue(
+                URI.create(configuration.jenkins().updateCenter()).toURL(), UpdateCenter.class);
     }
 }
